tests/negative/semantic/import_bad_extension/input.ci
import "utils.txt";
void main(string[] args) {}
